--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <div class="navbar">
             <a href="{{ url_for('home') }}" class="navbar-brand">Home</a>
             <a href="{{ url_for('about') }}" class="navbar-item">About</a>
+            <a href="/openapi" class="navbar-item">API</a>
         </div>
 
         <div class="body-content">
