--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} About page! {% endblock %}</h1>
+    <h5>{% block title %} This is a basic flask app with an API. Please visit the API url to see all the API documentation. {% endblock %}</h5>
 {% endblock %}
